[gd_scene load_steps=6 format=3 uid="uid://t437s2gj8io2"]

[ext_resource type="Script" uid="uid://c3hklj23i2ipd" path="res://Scenes/Menu_Scenes/result.gd" id="1_045o4"]
[ext_resource type="Texture2D" uid="uid://b47wkg5ccxbtd" path="res://Assets/gui/GUI.png" id="1_w8r0t"]
[ext_resource type="Theme" uid="uid://ce7xjqy03sudq" path="res://Themes/menu_theme.tres" id="2_svmgt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_045o4"]
atlas = ExtResource("1_w8r0t")
region = Rect2(2, 34, 44, 44)

[sub_resource type="LabelSettings" id="LabelSettings_5nrej"]

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_045o4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -57.0
offset_right = 48.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 1
texture = SubResource("AtlasTexture_045o4")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -44.0
offset_right = 32.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_svmgt")
theme_override_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "You Die
Your Time:"
label_settings = SubResource("LabelSettings_5nrej")
horizontal_alignment = 1

[node name="result_label" type="Label" parent="CanvasLayer/NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="go_menu" type="Button" parent="CanvasLayer/NinePatchRect/VBoxContainer"]
z_index = 2
layout_mode = 2
text = "Go Menu"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00643, 1)
mouse_filter = 2
color = Color(0, 0, 0, 0.227451)

[connection signal="pressed" from="CanvasLayer/NinePatchRect/VBoxContainer/go_menu" to="." method="_on_go_menu_pressed"]
